--- a/.github/workflows/build-readme.yml
+++ b/.github/workflows/build-readme.yml
@@ -55,3 +55,4 @@ jobs:
         uses: mikeal/publish-to-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_NAME: 'main' #optional defaults to master
